--- a/first_variant/main_app/templates/index.html
+++ b/first_variant/main_app/templates/index.html
@@ -12,6 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+
     <title>Real time online market analyser</title>
 
     <!-- Bootstrap Core CSS -->
@@ -23,6 +24,8 @@
     <!-- Morris Charts CSS -->
     <link href="{% static "css/plugins/morris.css" %}" rel="stylesheet">
 
+    <!--BOOTSTRAPSELECT-->
+    <link href="{% static "bootstrap-select/dist/css/bootstrap-select.css" %}" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="{% static "font-awesome/css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
 
@@ -218,7 +221,7 @@
                     <div class="col-lg-12">
                         <div class="alert alert-info alert-dismissable">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                            <i class="fa fa-info-circle"></i>  <strong>Like SB Admin?</strong> Try out <a href="http://startbootstrap.com/template-overviews/sb-admin-2" class="alert-link">SB Admin 2</a> for additional features!
+                            <i class="fa fa-info-circle"></i>  <strong>Select </strong> a market category and after press analyse button
                         </div>
                     </div>
                 </div>
@@ -226,26 +229,11 @@
 
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">
-                                <div class="row">
-                                    <div class="col-xs-3">
-                                        <i class="fa fa-comments fa-5x"></i>
-                                    </div>
-                                    <div class="col-xs-9 text-right">
-                                        <div class="huge">26</div>
-                                        <div>New Comments!</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <a href="#">
-                                <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </a>
-                        </div>
+                       <select class="selectpicker">
+                        <option>Mustard</option>
+                        <option>Ketchup</option>
+                        <option>Barbecue</option>
+                    </select>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="panel panel-green">
@@ -490,6 +478,9 @@
     <script src="{% static "js/plugins/morris/morris.min.js" %}"></script>
     <script src="{% static "js/plugins/morris/morris-data.js" %}"></script>
 
+
+
+     <script src="{% static "bootstrap-select/dist/js/bootstrap-select.js" %}"></script>
 </body>
 
 </html>
